--- a/utils.html
+++ b/utils.html
@@ -11,50 +11,52 @@ Utils.parse_splices = function(splices, give_moved){
     // if give_moodified is truthy, then we provide a third array, modified
     // giving an array of objects which had their index changed
 
-    var added, removed, moved;
+    var added_keys, removed_keys, moved_keys;
 
     // Firstly, get the list of added and removed *keys*
     if(!splices || !splices.keySplices || splices.keySplices.length === 0){
         // nothing
-        added = [];
-        removed = [];
+        added_keys = [];
+        removed_keys = [];
     } else if (splices.keySplices.length === 1){
         // assume that if there's only one element in the array then it's already properly de-deduped
-        added = splices.keySplices[0].added.slice(0);
-        removed = splices.keySplices[0].removed.slice(0);
+        added_keys = splices.keySplices[0].added;
+        removed_keys = splices.keySplices[0].removed;
     } else {
         // multiple splices..I'm not sure how to interpret the indexSplices,
         // but the keySplices is easier.
-        let keys_added = new Set(), keys_removed = new Set();
+        added_keys = new Set(), removed_keys = new Set();
         for (let s of splices.keySplices) {
             for (let key of s.removed) {
-                if(keys_added.has(key)){
-                    keys_added.delete(key);
+                if(added_keys.has(key)){
+                    added_keys.delete(key);
                 } else {
-                    keys_removed.add(key);
+                    removed_keys.add(key);
                 }
             }
             for (let key of s.added) {
-                if(keys_removed.has(key)){
-                    keys_removed.delete(key);
+                if(removed_keys.has(key)){
+                    removed_keys.delete(key);
                 } else {
-                    keys_added.add(key);
+                    added_keys.add(key);
                 }
             }
         }
-        removed = Array.from(keys_removed);
-        added = Array.from(keys_added);
     }
 
    
     // Now convert the keys to objects...
-    if(added.length){
+    var added = [], removed = [], moved = [];
+
+    if(added_keys.length || added_keys.size){
         let coll = Polymer.Collection.get(splices.indexSplices[0].object);
-        for(let [ii, key] of added.entries()){
-            added[ii] = coll.getItem(key);
-        }
+        for(let key of added_keys){
+            let item = coll.getItem(key);
+            (item !== undefined) && added.push(item);
+        }        
     }
-    if(removed.length){
+
+    if(removed.length || removed.size){
         // we can't use getItem for removed items, because they're no longer in the
         // collection.
 
@@ -65,8 +67,6 @@ Utils.parse_splices = function(splices, give_moved){
                 discarded_items.set(item._pkey, item);  
             }
         }
-        let removed_keys = removed.slice(0);
-        removed = [];
         for(let key of removed_keys){
             let item = discarded_items.get(key);
             (item !== undefined) && removed.push(item);
