commissioning rm-plots part 2

--- a/cut-object.html
+++ b/cut-object.html
@@ -220,14 +220,14 @@ doesn't have a worker, but it uses a similar system.
 
                 // private properties for use by tac-plots module, never notified
                 _tac_other: null,
-                _tac_other_options: null,
+                _tac_other_options: {},
                 _tac_is_on_worker: false,
 
                 // private properties for use by rm-plots module, never notified
                 _rm_spa_other: null,
                 _rm_dir_other: null,
                 _rm_speed_other: null,
-                _rm_other_options: null,
+                _rm_other_options: {},
                 _rm_is_on_worker: false,
 
                 // property set by Polymer.Collection
