--- a/tile-element.html
+++ b/tile-element.html
@@ -298,9 +298,9 @@ flex:2;
                 notify: true
             },
             group_spa_max: {
-                type: Number,
+                type: String, // a number, but pre-rendered as a string
                 notify: true,
-                value: -1,
+                value: "",
                 notify: true
             },
             state: {
